--- a/roles/zookeeper/templates/zoo.cfg.j2
+++ b/roles/zookeeper/templates/zoo.cfg.j2
@@ -14,6 +14,5 @@ clientPort=2181
 autopurge.snapRetainCount=5
 autopurge.purgeInterval=5
 
-{{ cluster_nodes }}
-
+#{{ cluster_nodes }}
 {{ groups["node"] | join('\n')}}
